@@ -76,9 +76,9 @@ file.rename <- function(from, to)
 
 list.files <- function(path = ".", pattern = NULL, all.files = FALSE,
                        full.names = FALSE, recursive = FALSE,
-                       ignore.case = FALSE, include.dirs = FALSE)
+		       ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
     .Internal(list.files(path, pattern, all.files, full.names,
-                         recursive, ignore.case, include.dirs))
+			 recursive, ignore.case, include.dirs, no..))
 
 dir <- list.files
 
