@@ -11,11 +11,11 @@
 \usage{
 list.files(path = ".", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
-           ignore.case = FALSE, include.dirs = FALSE)
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
 
        dir(path = ".", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
-           ignore.case = FALSE, include.dirs = FALSE)
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
 
 list.dirs(path = ".", full.names = TRUE, recursive = TRUE)
 }
@@ -36,6 +36,8 @@ list.dirs(path = ".", full.names = TRUE, recursive = TRUE)
   \item{ignore.case}{logical.  Should pattern-matching be case-insensitive?}
   \item{include.dirs}{logical.  Should subdirectory names be included in
     recursive listings?  (They always are in non-recursive ones).}
+  \item{no..}{logical.  Should both \code{"."} and \code{".."} be excluded
+    also from non-recursive listings?}
 }
 \description{
   These functions produce a character vector of the names of files or
